<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/base_spacing_3"
    android:padding="@dimen/base_spacing_2">

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.Alarm.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/alert_request_oauth_title"
        android:textColor="@color/guide_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        style="@style/TextAppearance.Alarm.Body4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_spacing_3"
        android:text="@string/alert_request_oauth_description"
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_agree"
        style="@style/Alarm.Base.TextButton.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_spacing_3"
        android:text="@string/alert_request_oauth_agree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_disagree"
        style="@style/Alarm.Base.TextButton.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_spacing_2"
        android:background="@drawable/selector_disagree_button_background"
        android:text="@string/alert_request_oauth_disagree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_agree" />


</androidx.constraintlayout.widget.ConstraintLayout>